--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,17 @@
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/src/assets/css/vertical-layout-light/style.css">
+
+    <link rel="stylesheet" href="../../vendors/feather/feather.css">
+    <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
+    <!-- endinject -->
+    <!-- Plugin css for this page -->
+    <!-- End plugin css for this page -->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
+    <!-- endinject -->
+    <link rel="shortcut icon" href="../../images/favicon.png" />
     <!-- endinject -->
     <link rel="shortcut icon" href="images/favicon.png" />
   </head>
@@ -48,7 +59,9 @@
   <script src="%PUBLIC_URL%/src/assets/js/todolist.js"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
-  <script src="js/dashboard.js"></script>
-  <script src="js/Chart.roundedBarCharts.js"></script>
+  <script src="%PUBLIC_URL%/src/assets/js/dashboard.js"></script>
+  <script src="%PUBLIC_URL%/src/assets/js/Chart.roundedBarCharts.js"></script>
+
+  <script src="%PUBLIC_URL%/src/assets/js/chart.js"></script>
   </body>
 </html>
