--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,11 @@
         <!-- End plugin css for this page -->
         <!-- inject:css -->
         <link rel="stylesheet" href="%PUBLIC_URL%/src/assets/css/vertical-layout-light/style.css" />
+        <link
+            href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css"
+            rel="stylesheet"
+        />
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" /> -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -61,5 +66,7 @@
         <script src="%PUBLIC_URL%/src/assets/js/Chart.roundedBarCharts.js"></script>
 
         <script src="%PUBLIC_URL%/src/assets/js/chart.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
